--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -1,10 +1,10 @@
 body {
-  color: $dark-gray;
+  color: $body-color;
   font-size: 18px;
   font-family: Roboto, sans-serif;
   line-height: 1.5;
 
-  background-color: $black;
+  background-color: $body-bg;
 }
 
 h1 {
@@ -28,7 +28,16 @@ h2 {
 }
 
 h1,
-h2 {
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: bold;
   text-transform: uppercase;
+  color: $main-text-color;
+}
+
+a {
+  color: $body-color;
 }
