--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -1,4 +1,9 @@
 .container {
   max-width: $container-width;
   margin: 0 auto;
+
+  @include media(mobile) {
+    max-width: none;
+    padding: 0 20px;
+  }
 }
