--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,6 +8,7 @@
 }
 
 $black: #08020d;
+$white: #ffffff;
 $gray: #e0e0e0;
 $dark-gray: #cacaca;
 $dark: #3c3b3d;
@@ -16,21 +17,86 @@ $orange: #f89202;
 $purple: #5328a1;
 $red: #95390c;
 
+$primary: $green;
+$primary-hover: darken($primary, 5);
+
+$main-text-color: $white;
+$secondary-text-color: $dark-gray;
+
+$body-color: $secondary-text-color;
+$body-bg: $black;
+
+/** GRID **/
+
 $breakpoints: (
   mobile: 1239.97px
 );
 $container-width: 1200px;
 
-/** UTILITIES **/
+/** COMPONENTS **/
 
-$font-sizes-line-height: 150%;
-$font-sizes: (
-  small: 12.8px,
+$btn-pill-radius: 50rem;
+
+$line-height: 1.5;
+
+$link-color: $body-color;
+$link-hover-color: lighten($body-color, 10);
+$link-active-color: $main-text-color;
+
+$search-placeholder-color: #757575;
+$search-border-hover-color: $search-placeholder-color;
+$search-border-focus-color: $primary;
+
+$btn-transition: color 0.25s, background-color 0.25s;
+$form-transition: color 0.25s, border 0.25s, background-color 0.25s;
+
+/** SIZES **/
+
+$spacers: (
+  0: 0,
   1: 16px,
   2: 24px,
   3: 32px,
   4: 40px,
   5: 48px,
   6: 56px,
-  7: 64px
+  7: 64px,
+  8: 78px
+);
+
+$font-sizes: map-merge(
+  (small: 13px),
+  $spacers
+);
+
+/** UTILITIES (auto generating with utilities/api) **/
+
+$utilities: (
+  "tt": (
+    property: text-transform,
+    values: uppercase capitalize
+  ),
+  "fs": (
+    property: font-size,
+    values: $font-sizes
+  ),
+  "fw": (
+    property: font-weight,
+    values: normal bold bolder 400 500 600 700 800
+  ),
+  "m": (
+    property: margin,
+    values: $spacers
+  ),
+  "mb": (
+    property: margin-bottom,
+    values: $spacers,
+    responsive: true
+  ),
+  "text": (
+    property: color,
+    values: (
+      white: $white
+    )
+  )
 );
