--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -17,6 +17,8 @@ $orange: #f89202;
 $purple: #5328a1;
 $red: #95390c;
 
+/** THEME VARS **/
+
 $primary: $green;
 $primary-hover: darken($primary, 5);
 
@@ -60,6 +62,7 @@ $btn-transition: color 0.25s, background-color 0.25s;
 $form-transition: color 0.25s, border 0.25s, background-color 0.25s;
 
 /** SIZES **/
+/** These values are used to generate utilities. Also you need to use it for our own css components **/
 
 $spacers: (
   0: 0,
