--- a/src/scss/modules/_pricing-list.scss
+++ b/src/scss/modules/_pricing-list.scss
@@ -1,5 +1,5 @@
 .pricing-list {
-  @include flex(50px, row, null, center, no-wrap);
+  @include flex(50px, row, null, center, nowrap);
 
   margin-bottom: 50px;
 
