--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -45,8 +45,8 @@ $buttons: (
     color: $primary,
     text-color: $main-text-color
   ),
-  orange: (
-    color: $orange,
+  red: (
+    color: $red,
     text-color: $main-text-color
   )
 );
