--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -16,6 +16,10 @@
     padding: 16px 30px;
   }
 
+  &-sm-wide {
+    padding: 16px 40px;
+  }
+
   &-pill {
     border-radius: $btn-pill-radius;
   }
