--- a/src/scss/modules/all.scss
+++ b/src/scss/modules/all.scss
@@ -6,3 +6,7 @@
 @import "pricing-item";
 @import "news-item";
 @import "app-image";
+@import "footer-col";
+@import "footer-link";
+@import "divider";
+@import "footer-nav";
