step 7: artist description

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -48,6 +48,10 @@ $buttons: (
   red: (
     color: $red,
     text-color: $main-text-color
+  ),
+  purple: (
+    color: $purple,
+    text-color: $main-text-color
   )
 );
 $buttons-outline: (
