added socials nav to footer

--- a/src/scss/modules/all.scss
+++ b/src/scss/modules/all.scss
@@ -10,4 +10,5 @@
 @import "footer-link";
 @import "divider";
 @import "footer-nav";
+@import "footer-socials";
 @import "artist-description-buttons";
