--- a/src/css/app.css
+++ b/src/css/app.css
@@ -754,6 +754,14 @@ a {
   column-gap: 16px;
 }
 
+.footer-socials {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+  column-gap: 24px;
+}
+
 .artist-description-buttons {
   display: flex;
   flex-wrap: wrap;
