--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -1,3 +1,24 @@
 .bg-gradient {
   background: linear-gradient(89.75deg, #5328a1 32.83%, #95390c 81.56%);
 }
+
+.grid {
+  display: grid;
+  gap: 25px 50px;
+
+  &--items-2 {
+    grid-template-columns: repeat(2, 1fr);
+
+    @include media(mobile) {
+      grid-template-columns: 1fr;
+    }
+  }
+
+  &--items-4 {
+    grid-template-columns: repeat(4, min-content);
+
+    @include media(mobile) {
+      grid-template-columns: repeat(2, min-content);
+    }
+  }
+}
