--- a/src/scss/_grid.scss
+++ b/src/scss/_grid.scss
@@ -7,3 +7,32 @@
     padding: 0 20px;
   }
 }
+
+.flex {
+  @include flex();
+
+  &-column {
+    flex-direction: column;
+  }
+
+  &-row {
+    flex-direction: row;
+  }
+
+  &-wrap {
+    flex-wrap: wrap;
+  }
+
+  &-center {
+    justify-content: center;
+    align-items: center;
+  }
+
+  &-align-center {
+    align-items: center;
+  }
+
+  &-justify-center {
+    justify-content: center;
+  }
+}
