--- a/src/scss/modules/_navigation.scss
+++ b/src/scss/modules/_navigation.scss
@@ -3,25 +3,32 @@
   font-size: 11px;
   line-height: $line-height;
 
-  @include flex(90px, row, center);
+  @include flex(null, row, center);
 
   @include media(custom, 840px) {
     flex-direction: column;
     align-items: flex-start;
   }
 
+  &-logo-icon {
+    width: map-get($spacers, 2);
+    height: map-get($spacers, 2);
+    margin-right: map-get($spacers, 1);
+  }
+
   &-logo {
+    margin-right: 90px;
+
     font-weight: 400;
 
     @include flex(map-get($spacers, 1), row, center);
 
-    @include media(custom, 840px) {
-      margin-bottom: map-get($spacers, 1);
+    @include media(mobile) {
+      margin-right: 0;
     }
 
-    &-icon {
-      width: map-get($spacers, 2);
-      height: map-get($spacers, 2);
+    @include media(custom, 840px) {
+      margin-bottom: map-get($spacers, 1);
     }
   }
 
@@ -55,6 +62,7 @@
     padding: 3px 8px;
     border: 2px solid transparent;
     border-radius: 50px;
+    min-width: 248px;
 
     color: $search-placeholder-color;
     font-size: 13.3px;
